# ESP32WifiHacks

./: .gitignore  .gitmodules  README.md
ESPCode/: CMakeLists.txt  sdkconfig.old
ESPCode/main/: CMakeLists.txt  beaconSniffer.c  beaconSniffer.h  beaconSpammer.h  deauthDetector.h  deauther.h  espFrameSanityCheckHack.h  frameContents.h  main.c  wifiInit.h
HostCode/: CMakeLists.txt  beaconSniffer.h  beaconSpammer.h  deauthDetector.h  deauther.h  interface.h  main.cpp  networksList.h  old-main.cpp  uiHelper.h
HostCode/ArduinoSerialIO/: README.md  arduinoSerial.hpp
HostCode/Interface/: CMakeLists.txt  beaconSniffer.h  beaconSpammer.h  deauther.h  interface.h  main.cpp  networksList.h  uiHelper.h
